fix: Issue with z-index

--- a/src/styles/components/Hamburger.module.css
+++ b/src/styles/components/Hamburger.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
-  z-index: 10;
+  padding: 10px 0 10px 10px;
+  z-index: var(--z-index-hamburger);
   position: relative;
 }
 
@@ -49,27 +49,6 @@
   top: 8px;
   right: 0;
 }
-
-/*
-.hambox::before {
-  content: " ";
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: var(--sidenav-color);
-  z-index: -1;
-  transform: scale(0);
-  transition: var(--transition-hamburger);
-}
-
-.button:hover > .hambox::before {
-  transform: scale(1.5);
-}
-*/
 
 .button:hover > .hambox > .hamburger,
 .button:hover > .hambox > .hamburger::after {
